fix: image name

--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -3,7 +3,7 @@ services:
   nginx:
     container_name: nginx
     build: ./nginx
-    image: nginx:ft
+    image: nginx
     restart: always
     depends_on:
       - wordpress
@@ -18,7 +18,7 @@ services:
   wordpress:
     container_name: wordpress
     build: ./wordpress
-    image: wordpress:ft
+    image: wordpress
     restart: always
     depends_on:
       mariadb:
@@ -47,7 +47,7 @@ services:
   mariadb:
     container_name: mariadb
     build: ./mariadb
-    image: mariadb:ft
+    image: mariadb
     restart: always
     networks:
       - backend
