--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -55,7 +55,7 @@ services:
       - db-data:/var/lib/mysql
       - ./mariadb/conf/my.cnf.d/mariadb-server.cnf:/etc/my.cnf.d/mariadb-server.cnf:ro
     healthcheck:
-      test: mysqladmin ping --silent -u $DB_USER -p$DB_PASSWORD
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 5s
       timeout: 5s
     environment:
