--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -10,7 +10,8 @@ RUN mkdir -p /var/lib/mysql /run/mysqld && \
     chmod 1777 /run/mysqld
 
 # Copy entrypoint
-COPY ./entrypoint.sh /usr/local/bin/
+COPY entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/entrypoint.sh
 
 # Volumes
 VOLUME ["/var/lib/mysql"]
