--- a/srcs/nginx/conf/nginx.conf
+++ b/srcs/nginx/conf/nginx.conf
@@ -2,6 +2,9 @@
 events {}
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     server {
         listen 443 ssl;
         server_name tkitahar.42.fr;
